Update item pipes to new transfer API